--- a/app/service/pass/user/dao/BUILD.bazel
+++ b/app/service/pass/user/dao/BUILD.bazel
@@ -13,7 +13,7 @@ go_library(
         "//app/service/pass/user/model:go_default_library",
         "//pkg/database/mysql:go_default_library",
         "//pkg/ecode:go_default_library",
-        "@com_github_jinzhu_gorm//:go_default_library",
+        "@io_gorm_gorm//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
     ],
 )
