--- a/app/service/user/vip/dao/BUILD.bazel
+++ b/app/service/user/vip/dao/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -15,22 +15,7 @@ go_library(
         "//pkg/database/mysql:go_default_library",
         "//pkg/ecode:go_default_library",
         "@com_github_golang_mock//gomock:go_default_library",
-        "@com_github_jinzhu_gorm//:go_default_library",
+        "@io_gorm_gorm//:go_default_library",
         "@org_golang_google_grpc//codes:go_default_library",
-    ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = [
-        "dao_test.go",
-        "vip_test.go",
-    ],
-    embed = [":go_default_library"],
-    deps = [
-        "//app/service/user/vip/model:go_default_library",
-        "//pkg/database/mysql:go_default_library",
-        "@com_github_data_dog_go_sqlmock//:go_default_library",
-        "@com_github_smartystreets_goconvey//convey:go_default_library",
     ],
 )
